--- a/js/js8.html
+++ b/js/js8.html
@@ -14,21 +14,21 @@
     <script>
         //Alert tag-doesn't return anything(unidefined);
 
-        //alert("This is a message");
+        alert("This is a message");
 
-        // let name;
-        // name=prompt("Enter the name","guest");
-        // console.log(name);
+        let name;
+        name=prompt("Enter the name","guest");
+        console.log(name);
 
-        // let ask=confirm("Do you really want to quit?");
-        // console.log(ask);
+        let ask=confirm("Do you really want to quit?");
+        console.log(ask);
 
-        // if(ask==true){
-        //     console.log("Quitting the program...");
-        // }
-        // else{
-        //     console.log("Quitting not successful.");
-        // }
+        if(ask==true){
+            console.log("Quitting the program...");
+        }
+        else{
+            console.log("Quitting not successful.");
+        }
 
         let age=prompt("Enter the age of the user: ");
         console.log(age);
