--- a/js/js3.html
+++ b/js/js3.html
@@ -17,8 +17,8 @@
     </div>
 </body>
 <script>
-    var fname = "nikhil";
-    var lname = "behera";
+    var fname = "first_name";
+    var lname = "surname";
     var msg = "is a good coder.";
     var course = "CSE";
     var temp = `${fname} ${lname} is studying in the course: ${course} `;
