--- a/js/js5.html
+++ b/js/js5.html
@@ -34,13 +34,13 @@
 
         let age=69;
         if(age < 18){
-            console.log("tu daru nahi pi sakts mc");
+            console.log("age not permitted.");
         }
         else if(age >= 18){
-            console.log("peele daru mc");
+            console.log("age permitted.");
         }
         else{
-            console.log("tu keplar 22B ka hai lawde.");
+            console.log("ever considered drinking water??");
         }
 
         const angle = 45;
