--- a/js/js3.html
+++ b/js/js3.html
@@ -21,7 +21,7 @@
     var lname = "surname";
     var msg = "is a good coder.";
     var course = "CSE";
-    var temp = `${fname} ${lname} is studying in the course: ${course} `;
+    var temp = `${fname} ${lname} is studying in the course: ${course} `; //eg of interpolation of strings.
     console.log(fname + lname + msg);
     console.log(temp);
 
