--- a/js/js6.html
+++ b/js/js6.html
@@ -24,7 +24,7 @@
         }
         console.log(a);
 
-        let arr=[1,"nikhil",17,"nalla"];
+        let arr=[1,"nikhil",17,"coder"];
         console.log(arr);
         // console.log(arr[0]);
         // console.log(arr[1]);
