modified the script code and added css
completed the notepad project.

--- a/js/notepad/index.html
+++ b/js/notepad/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notepad</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
-<link rel="stylesheet" href="style.css">
+
 <body>
     <div class="back_color">
         <button class="start">Start</button>
         <button class="stop">Stop</button>
     </div>
     <div class="text">
-        <input class="note_title" type="text" placeholder="Enter a title">
+        <input class="note-title" type="text" placeholder="Enter a title">
         <textarea class="note_text" placeholder="Enter your text here..." rows="50" cols="70"></textarea>
-        <div id="notes_container"></div>
+        <div class="notes_container"></div>
         <button class="submit">Submit</button>
     </div>
 </body>
