edited index and added style

--- a/js/apis/Cook/index.html
+++ b/js/apis/Cook/index.html
@@ -7,7 +7,9 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    Enter the Dish : <input type="text" placeholder="dish to be searched" class="input_dish">
+    <div class="dish_enter">
+        Enter the Dish : <input type="text" placeholder="dish to be searched" class="input_dish">
+    </div>
     <button class="search"><Search>Search</Search></button>
     <div class="display">
         <h3>Recipe</h3>
