--- a/leaflet_js/cafes/index.html
+++ b/leaflet_js/cafes/index.html
@@ -21,8 +21,8 @@
 </style>
 
 <body>
-    <div id="map">
-    </div>
+    <div id="map"></div>
+    <button id="center-btn" style="position: absolute; left: 50%; z-index: 1000; background: white; border: 1px solid #888; border-radius: 50%; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 2px 6px rgba(0,0,0,0.15);">📍</button>
 </body>
 <script src="script.js"></script>
 
